# tetrii

./: Cargo.toml  README.md  img
src/: board.rs  config.rs  controller.rs  main.rs  style.css
src/board/: board.ui  imp.rs  mod.rs
src/controller/: controller.ui  imp.rs  mod.rs
src/controller/imp/: controller.ui  mod.rs
src/controller/imp/summary/: imp.rs  mod.rs  summary.ui
src/options/: imp.rs  mod.rs  options.ui
